--- a/index.html
+++ b/index.html
@@ -3,7 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interior Design</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Modern Interior</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <a class="logo-link btn" href="">This Interior</a>
+      </div>
+      <div class="nav-container">
+        <ul class="nav-links">
+          <li class="home-tab">Home</li>
+          <li>Collection</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </header>
+
+    <main class="banner">
+      <div class="banner-container">
+        <div class="banner-left">
+          <h1 class="banner-title">Modern interior</h1>
+          <p class="banner-description">
+            A full-Service residential & commercial interior design and staging
+            company offering professional organizing & eco-services.
+          </p>
+          <div>
+            <a class="banner-btn" href="">Read More &#8594;</a>
+          </div>
+        </div>
+        <div>
+          <img class="banner-img" src="./photo1.png" alt="" />
+        </div>
+        <div class="card">
+          <div class="profile">
+            <img class="profile-photo" src="./photo2.png" alt="" />
+            <div class="profile-info">
+              <h3 class="profile-name">Aliza Webber</h3>
+              <p class="profession"><small>Interior designer</small></p>
+            </div>
+          </div>
+          <div>
+            <h1 class="profile-heading">
+              Designed in 2020 by <br />
+              Aliza Webber
+            </h1>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <p class="footer-text">
+        Created by <strong>imran_it1</strong> - devChallenges.io
+      </p>
+    </footer>
+  </body>
 </html>
